# private-pgm

./: .gitignore  .pydocstylerc  .pylintrc  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  traffic.yaml
data/: adult-domain.json  adult.csv
data/adult_pub025_01/: adult_pub025_01-domain.json  priv.csv  pub.csv
docs/: changelog.md  changelog.rst  conf.py  contributing.md  examples.md  examples.rst  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  license.rst  mbi.rst
docs/_autosummary_output/: mbi.callbacks.rst  mbi.clique_vector.rst  mbi.dataset.rst  mbi.estimation.rst  mbi.factor.rst  mbi.marginal_loss.rst  mbi.marginal_oracles.rst
examples/: adult_example.py  benchmarks.py  cdp2adp.py  convergence.py  dual_query.py  gum_example.py  hdmm.py  mst.py  mwem-marginal.py  mwem.py  prefix-100.npy  prefix-85.npy  prefix-99.npy  privbayes.py  torch_example.py  toy_example.py
experiments/neurips/: '  benchmarks.py  compare_estimators.py  draw-graphs.ipynb  dualquery.ipynb  eval_marginal_inference.py  exact_vs_approx.py  expanding model.ipynb  fem.py  gum_compare.py  hdmm-fire-1.pkl  hdmm-fire-128.pkl  hdmm-fire-15.pkl  hdmm-fire-16.pkl  hdmm-fire-2.pkl  hdmm-fire-256.pkl  hdmm-fire-32.pkl  hdmm-fire-4.pkl  hdmm-fire-455.pkl  hdmm-fire-64.pkl  hdmm-fire-8.pkl  hdmm-titanic-15.pkl  hdmm-titanic-16.pkl  hdmm1.py  hdmm_marg_strategy.ipynb  hdmm_new.py  main.py  maximum likelihood.ipynb  mwem.py  mwem_accuracy.py  mwem_new.py  mwem_no_noise.py  plotting-old.ipynb  plotting.ipynb  prefix-100-missing.npy  privbayes.py  projecting-methods.ipynb  pull.sh  push.sh  toy-project.ipynb
mechanisms/: NN.py  RP.py  adaptive_grid.py  aim.py  cdp2adp.py  gaussian+appgm.py  hdmm+appgm.py  jam.py  margnet.py  mechanism.py  mst.py  mwem+pgm.py
src/mbi/: __init__.py  approximate_oracles.py  callbacks.py  clique_utils.py  clique_vector.py  (+24 more)
test/: clique_utils_test.py  test_approximate_oracles.py  test_dataset.py  test_domain.py  test_einsum.py  test_estimation.py  test_factor.py  test_factor_graph.py  test_graphical_model.py  test_gum.py  test_inference.py  test_junction_tree.py  test_marginal_oracles.py  test_region_graph.py  test_torch.py
(+155 files in other folders)
